Fix calendar-cont content alignment

--- a/assets/static/styles.css
+++ b/assets/static/styles.css
@@ -89,7 +89,7 @@ input:not(.numInput):focus, button:focus, select:not(.flatpickr-monthDropdown-mo
 }
 
 input:not(.numInput):not(.checkbox) {
-    width: 9vw;
+    width: 120px;
     box-shadow: inset 1px 2px 4px 0 rgba(0,0,0,0.3);
 }
 
@@ -275,6 +275,11 @@ h4{
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     background-color: rgba(72, 72, 221, 0.492);
+}
+
+.calendar-cont > div {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .add_form {
